refactor: css 인식 경로 변경 (#16)

--- a/src/main/resources/templates/subscription.html
+++ b/src/main/resources/templates/subscription.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/css/subscription.css"/>
+    <link rel="stylesheet" href="/css/subscription.css" />
+
     <title>오곡 - 구독 신청</title>
 </head>
 <body>
