feat: 구독 신청 api 생성 (#16)

--- a/src/main/resources/templates/subscription.html
+++ b/src/main/resources/templates/subscription.html
@@ -55,7 +55,7 @@
             window.location.href = '/verified';
         };
 
-        fetch('/api/subscription/subscribe', {
+        fetch('/api/subscriptions', {
             method: 'POST',
             headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
             body: new URLSearchParams({ email, genre }),
