fix: 인증 메일 문구 및 폰트 사이즈 변경 (#20)

--- a/src/main/resources/templates/cert.html
+++ b/src/main/resources/templates/cert.html
@@ -17,9 +17,9 @@
                 </tr>
                 <tr>
                     <td style="padding: 20px; text-align: center;">
-                        <p style="font-size: 16px; color: #333333; margin: 10px 0;">구독을 완료하기 위해 아래 인증번호를 입력해주세요.</p>
-                        <p style="font-size: 16px; color: #333333; margin: 10px 0;">이 인증번호는 구독 절차를 위한 인증번호입니다.</p>
-                        <p style="font-size: 16px; color: #333333; margin: 10px 0;">인증번호 유효기간인 10분 내에 인증을 완료해주세요!</p>
+                        <p style="font-size: 13px; color: #333333; margin: 10px 0;">오곡 서비스 구독 절차를 위한 인증번호입니다.</p>
+                        <p style="font-size: 13px; color: #333333; margin: 10px 0;">구독을 완료하기 위해 아래 인증번호를 입력해주세요.</p>
+                        <p style="font-size: 13px; color: #333333; margin: 10px 0;">인증번호 유효기간인 10분 내에 인증을 완료해주세요!</p>
                         <div style="font-size: 22px; font-weight: bold; color: #0056b3; background-color: #f0faff; padding: 10px 20px; display: inline-block; border-radius: 5px; margin-top: 10px; border: 1px solid #d1e7ff;">
                             <p th:text="|${verificationCode}|">인증번호</p>
                         </div>
