fix: 구독 완료 후 리다이렉트 화면 변경 (#23)

--- a/src/main/resources/templates/verified.html
+++ b/src/main/resources/templates/verified.html
@@ -49,7 +49,7 @@
     const errorModal = document.getElementById('error-modal');
     const errorMessageText = document.getElementById('error-message-text');
     const redirectToVerification = () => {
-            window.location.href = '/';
+            window.location.href = '/subscription.html';
     };
     document.getElementById('verification-form').addEventListener('submit', function (e) {
         e.preventDefault();
